gs.output
State 375 conflicts: 1 shift/reduce


Grammar

    0 $accept: gl_shader_program $end

    1 gl_shader_program: shader string_const '{' gl_shader_global_declaration_list '}'

    2 gl_editor_prop_declaration: EditorProperties '{' TODO '}'

    3 gl_editor_macro_declaration: EditorMacros '{' TODO '}'

    4 gl_common_global_declaration: gl_variable_declaration
    5                             | gl_render_queue_assignment
    6                             | gl_render_state_assignment
    7                             | struct_specifier
    8                             | function_definition
    9                             | gl_render_state_declaration

   10 gl_shader_global_declaration: gl_common_global_declaration
   11                             | gl_editor_prop_declaration
   12                             | gl_editor_macro_declaration
   13                             | gl_subshader_program

   14 gl_shader_global_declaration_list: /* empty */
   15                                  | gl_shader_global_declaration_list gl_shader_global_declaration

   16 gl_subshader_program: subshader string_const scope_brace gl_subshader_global_declaration_list scope_end_brace

   17 gl_subshader_global_declaration_list: gl_subshader_global_declaration
   18                                     | gl_subshader_global_declaration_list gl_subshader_global_declaration

   19 gl_subshader_global_declaration: gl_common_global_declaration
   20                                | gl_tag_specifier
   21                                | gl_pass_program
   22                                | gl_use_pass_declaration

   23 gl_tag_specifier: tags '{' gl_tag_assignment_list '}'

   24 gl_tag_assignment_list: /* empty */
   25                       | gl_tag_assignment
   26                       | gl_tag_assignment_list ';' gl_tag_assignment

   27 gl_tag_assignment: gl_tag_id '=' gl_tag_value

   28 gl_tag_id: ReplacementTag

   29 gl_tag_value: string_const
   30             | INT_CONSTANT

   31 gl_pass_program: pass string_const scope_brace gl_pass_global_declaration_list scope_end_brace

   32 gl_pass_global_declaration_list: gl_pass_global_declaration
   33                                | gl_pass_global_declaration_list gl_pass_global_declaration

   34 gl_pass_global_declaration: gl_common_global_declaration
   35                           | gl_main_shader_assignment
   36                           | gl_tag_specifier

   37 gl_use_pass_declaration: UsePass string_const ';'

   38 gl_render_state_declarator: blend_state
   39                           | depth_state
   40                           | stencil_state
   41                           | raster_state

   42 gl_render_state_assignment: gl_render_state_declarator '=' id ';'
   43                           | gl_render_state_declarator '{' gl_render_state_prop_list '}'

   44 gl_render_state_declaration: gl_render_state_declarator id '{' gl_render_state_prop_list '}'

   45 gl_render_state_prop_list: /* empty */
   46                          | gl_render_state_prop gl_render_state_prop_list

   47 gl_render_state_prop: id '=' id ';' id '=' true ';' id '=' false ';' id '=' INT_CONSTANT ';' id '=' FLOAT_CONSTANT ';'

   48 gl_mian_shader_entry: VertexShader
   49                     | FragmentShader

   50 gl_main_shader_assignment: gl_mian_shader_entry '=' id ';'

   51 gl_render_queue_assignment: render_queue_type '=' id ';'
   52                           | render_queue_type '=' render_queue_type '.' id ';'

   53 gl_variable_declaration: fully_specified_type id ';'

   54 ext_builtin_type_specifier_nonarray: void
   55                                    | float
   56                                    | int
   57                                    | mat4

   58 type_specifier_nonarray: ext_builtin_type_specifier_nonarray
   59                        | id

   60 struct_specifier: struct id '{' struct_declaration_list '}'
   61                 | struct '{' struct_declaration_list '}'

   62 struct_declaration_list: struct_declaration
   63                        | struct_declaration_list struct_declaration

   64 struct_declaration: type_specifier struct_declarator_list ';'
   65                   | type_qualifier type_specifier struct_declaration_list ';'

   66 struct_declarator_list: struct_declarator
   67                       | struct_declarator_list ',' struct_declarator

   68 struct_declarator: id
   69                  | id array_specifier_list

   70 array_specifier_list: array_specifier
   71                     | array_specifier_list array_specifier

   72 array_specifier: '[' ']'
   73                | '[' integer_constant_expression ']'

   74 type_specifier: type_specifier_nonarray
   75               | ext_builtin_type_specifier_nonarray array_specifier_list

   76 precision_qualifier: highp
   77                    | mediemp
   78                    | lowp

   79 type_qualifier: single_type_qualifier
   80               | type_qualifier single_type_qualifier

   81 single_type_qualifier: storage_qualifier
   82                      | precision_qualifier
   83                      | interpolation_qualifier
   84                      | invariant_qualifier
   85                      | PRECISE

   86 storage_qualifier: const
   87                  | in
   88                  | out
   89                  | inout
   90                  | centroid

   91 interpolation_qualifier: SMOOTH
   92                        | FLAT

   93 invariant_qualifier: INVARIANT

   94 integer_constant_expression: id
   95                            | INT_CONSTANT
   96                            | INT_CONSTANT '+' INT_CONSTANT
   97                            | INT_CONSTANT '-' INT_CONSTANT
   98                            | INT_CONSTANT '*' INT_CONSTANT
   99                            | INT_CONSTANT '/' INT_CONSTANT
  100                            | INT_CONSTANT '%' INT_CONSTANT

  101 conditional_expression: logical_or_expression
  102                       | logical_or_expression '?' expression ':' assignment_expression

  103 logical_or_expression: logical_xor_expression
  104                      | logical_or_expression or logical_xor_expression

  105 logical_xor_expression: logical_and_expression
  106                       | logical_xor_expression xor logical_and_expression

  107 logical_and_expression: inclusive_or_expression
  108                       | logical_and_expression and inclusive_or_expression

  109 inclusive_or_expression: exclusive_or_expression
  110                        | inclusive_or_expression '|' exclusive_or_expression

  111 exclusive_or_expression: and_expression
  112                        | exclusive_or_expression '^' and_expression

  113 and_expression: equality_expression
  114               | and_expression '&' equality_expression

  115 equality_expression: relational_expression
  116                    | equality_expression eq relational_expression
  117                    | equality_expression neq relational_expression

  118 relational_expression: shift_expression
  119                      | relational_expression '<' shift_expression
  120                      | relational_expression '>' shift_expression
  121                      | relational_expression le shift_expression
  122                      | relational_expression ge shift_expression

  123 shift_expression: additive_expression
  124                 | shift_expression left_op additive_expression
  125                 | shift_expression right_op additive_expression

  126 additive_expression: multiplicative_expression
  127                    | additive_expression '+' multiplicative_expression
  128                    | additive_expression '-' multiplicative_expression

  129 multiplicative_expression: unary_expression
  130                          | multiplicative_expression '*' unary_expression
  131                          | multiplicative_expression '/' unary_expression
  132                          | multiplicative_expression '%' unary_expression

  133 unary_expression: postfix_expression
  134                 | INC_OP unary_expression
  135                 | DEC_OP unary_expression
  136                 | unary_operator unary_expression

  137 unary_operator: '+'
  138               | '-'
  139               | '!'
  140               | '~'

  141 postfix_expression: primary_expression
  142                   | postfix_expression '[' expression ']'
  143                   | function_call
  144                   | postfix_expression '.' id
  145                   | postfix_expression '.' function_call
  146                   | postfix_expression INC_OP
  147                   | postfix_expression DEC_OP

  148 primary_expression: variable_identifier
  149                   | INT_CONSTANT
  150                   | FLOAT_CONSTANT
  151                   | true
  152                   | false
  153                   | '(' expression ')'

  154 variable_identifier: id

  155 expression: assignment_expression
  156           | expression ',' assignment_expression

  157 assignment_expression: conditional_expression
  158                      | unary_expression assignment_operator assignment_expression

  159 assignment_operator: '='
  160                    | MUL_ASSIGN
  161                    | DIV_ASSIGN
  162                    | MOD_ASSIGN
  163                    | ADD_ASSIGN
  164                    | SUB_ASSIGN
  165                    | LEFT_ASSIGN
  166                    | RIGHT_ASSIGN
  167                    | AND_ASSIGN
  168                    | XOR_ASSIGN
  169                    | OR_ASSIGN

  170 function_call: function_call_generic

  171 function_call_generic: function_identifier '(' function_call_parameter_list ')'
  172                      | function_identifier '(' ')'
  173                      | function_identifier '(' void ')'

  174 function_call_parameter_list: assignment_expression
  175                             | function_call_parameter_list ',' assignment_expression

  176 function_identifier: type_specifier

  177 function_definition: function_prototype compound_statement

  178 function_prototype: function_declarator ')'

  179 function_declarator: function_header
  180                    | function_header function_parameter_list

  181 function_header: fully_specified_type id '('

  182 fully_specified_type: type_specifier
  183                     | type_qualifier type_specifier

  184 function_parameter_list: parameter_declaration
  185                        | function_parameter_list ',' parameter_declaration

  186 parameter_declaration: type_qualifier parameter_declarator
  187                      | parameter_declarator
  188                      | type_qualifier type_specifier
  189                      | type_specifier

  190 parameter_declarator: type_specifier id
  191                     | type_specifier id array_specifier_list

  192 statement_list: statement
  193               | statement_list statement

  194 statement: compound_statement
  195          | simple_statement

  196 compound_statement: '{' '}'
  197                   | scope_brace statement_list scope_end_brace

  198 simple_statement: declaration
  199                 | expression_statement
  200                 | selection_statement
  201                 | iteration_statement
  202                 | jump_statement

  203 declaration: function_prototype ';'
  204            | init_declarator_list ';'
  205            | PRECISION precision_qualifier ext_builtin_type_specifier_nonarray ';'
  206            | type_qualifier id '{' struct_declaration_list '}' ';'
  207            | type_qualifier id '{' struct_declaration_list '}' decl_identifier ';'
  208            | type_qualifier id '{' struct_declaration_list '}' decl_identifier array_specifier_list ';'
  209            | type_qualifier id ';'
  210            | type_qualifier id identifier_list ';'

  211 decl_identifier: id

  212 identifier_list: ',' decl_identifier
  213                | identifier_list ',' decl_identifier

  214 init_declarator_list: single_declaration
  215                     | init_declarator_list ',' decl_identifier
  216                     | init_declarator_list ',' decl_identifier array_specifier_list
  217                     | init_declarator_list ',' decl_identifier array_specifier_list '=' initializer
  218                     | init_declarator_list ',' decl_identifier '=' initializer

  219 single_declaration: fully_specified_type decl_identifier
  220                   | fully_specified_type decl_identifier array_specifier_list
  221                   | fully_specified_type decl_identifier array_specifier_list '=' initializer
  222                   | fully_specified_type decl_identifier '=' initializer

  223 initializer: assignment_expression
  224            | '{' initializer_list '}'

  225 initializer_list: initializer
  226                 | initializer_list ',' initializer

  227 expression_statement: ';'
  228                     | expression ';'

  229 selection_statement: IF '(' expression ')' statement
  230                    | IF '(' expression ')' statement ELSE statement

  231 iteration_statement: WHILE '(' condition ')' statement
  232                    | FOR '(' for_init_statement for_rest_statement ')' statement

  233 for_init_statement: expression_statement
  234                   | declaration

  235 condition: expression
  236          | fully_specified_type variable_identifier '=' initializer

  237 for_rest_statement: conditionopt ';'
  238                   | conditionopt ';' expression

  239 conditionopt: /* empty */
  240             | condition

  241 jump_statement: CONTINUE ';'
  242               | BREAK ';'
  243               | RETURN ';'
  244               | RETURN expression ';'
  245               | DISCARD ';'

  246 scope_brace: '{'

  247 scope_end_brace: '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 139
'%' (37) 100 132
'&' (38) 114
'(' (40) 153 171 172 173 181 229 230 231 232
')' (41) 153 171 172 173 178 229 230 231 232
'*' (42) 98 130
'+' (43) 96 127 137
',' (44) 67 156 175 185 212 213 215 216 217 218 226
'-' (45) 97 128 138
'.' (46) 52 144 145
'/' (47) 99 131
':' (58) 102
';' (59) 26 37 42 47 50 51 52 53 64 65 203 204 205 206 207 208 209
    210 227 228 237 238 241 242 243 244 245
'<' (60) 119
'=' (61) 27 42 47 50 51 52 159 217 218 221 222 236
'>' (62) 120
'?' (63) 102
'[' (91) 72 73 142
']' (93) 72 73 142
'^' (94) 112
'{' (123) 1 2 3 23 43 44 60 61 196 206 207 208 224 246
'|' (124) 110
'}' (125) 1 2 3 23 43 44 60 61 196 206 207 208 224 247
'~' (126) 140
error (256)
shader (258) 1
subshader (259) 16
pass (260) 31
id (261) 42 44 47 50 51 52 53 59 60 68 69 94 144 154 181 190 191 206
    207 208 209 210 211
render_queue_type (262) 51 52
blend_state (263) 38
depth_state (264) 39
stencil_state (265) 40
raster_state (266) 41
EditorProperties (267) 2
EditorMacros (268) 3
tags (269) 23
ReplacementTag (270) 28
INT_CONSTANT (271) 30 47 95 96 97 98 99 100 149
FLOAT_CONSTANT (272) 47 150
true (273) 47 151
false (274) 47 152
UsePass (275) 37
VertexShader (276) 48
FragmentShader (277) 49
void (278) 54 173
float (279) 55
int (280) 56
mat4 (281) 57
struct (282) 60 61
highp (283) 76
mediemp (284) 77
lowp (285) 78
const (286) 86
in (287) 87
out (288) 88
inout (289) 89
centroid (290) 90
SMOOTH (291) 91
FLAT (292) 92
PRECISE (293) 85
PRECISION (294) 205
INVARIANT (295) 93
or (296) 104
xor (297) 106
and (298) 108
eq (299) 116
neq (300) 117
ge (301) 122
le (302) 121
left_op (303) 124
right_op (304) 125
INC_OP (305) 134 146
DEC_OP (306) 135 147
MUL_ASSIGN (307) 160
DIV_ASSIGN (308) 161
MOD_ASSIGN (309) 162
ADD_ASSIGN (310) 163
SUB_ASSIGN (311) 164
LEFT_ASSIGN (312) 165
RIGHT_ASSIGN (313) 166
AND_ASSIGN (314) 167
XOR_ASSIGN (315) 168
OR_ASSIGN (316) 169
IF (317) 229 230
ELSE (318) 230
WHILE (319) 231
FOR (320) 232
CONTINUE (321) 241
BREAK (322) 242
RETURN (323) 243 244
DISCARD (324) 245
TODO (325) 2 3
string_const (326) 1 16 29 31 37


Nonterminals, with rules where they appear

$accept (96)
    on left: 0
gl_shader_program (97)
    on left: 1, on right: 0
gl_editor_prop_declaration (98)
    on left: 2, on right: 11
gl_editor_macro_declaration (99)
    on left: 3, on right: 12
gl_common_global_declaration (100)
    on left: 4 5 6 7 8 9, on right: 10 19 34
gl_shader_global_declaration (101)
    on left: 10 11 12 13, on right: 15
gl_shader_global_declaration_list (102)
    on left: 14 15, on right: 1 15
gl_subshader_program (103)
    on left: 16, on right: 13
gl_subshader_global_declaration_list (104)
    on left: 17 18, on right: 16 18
gl_subshader_global_declaration (105)
    on left: 19 20 21 22, on right: 17 18
gl_tag_specifier (106)
    on left: 23, on right: 20 36
gl_tag_assignment_list (107)
    on left: 24 25 26, on right: 23 26
gl_tag_assignment (108)
    on left: 27, on right: 25 26
gl_tag_id (109)
    on left: 28, on right: 27
gl_tag_value (110)
    on left: 29 30, on right: 27
gl_pass_program (111)
    on left: 31, on right: 21
gl_pass_global_declaration_list (112)
    on left: 32 33, on right: 31 33
gl_pass_global_declaration (113)
    on left: 34 35 36, on right: 32 33
gl_use_pass_declaration (114)
    on left: 37, on right: 22
gl_render_state_declarator (115)
    on left: 38 39 40 41, on right: 42 43 44
gl_render_state_assignment (116)
    on left: 42 43, on right: 6
gl_render_state_declaration (117)
    on left: 44, on right: 9
gl_render_state_prop_list (118)
    on left: 45 46, on right: 43 44 46
gl_render_state_prop (119)
    on left: 47, on right: 46
gl_mian_shader_entry (120)
    on left: 48 49, on right: 50
gl_main_shader_assignment (121)
    on left: 50, on right: 35
gl_render_queue_assignment (122)
    on left: 51 52, on right: 5
gl_variable_declaration (123)
    on left: 53, on right: 4
ext_builtin_type_specifier_nonarray (124)
    on left: 54 55 56 57, on right: 58 75 205
type_specifier_nonarray (125)
    on left: 58 59, on right: 74
struct_specifier (126)
    on left: 60 61, on right: 7
struct_declaration_list (127)
    on left: 62 63, on right: 60 61 63 65 206 207 208
struct_declaration (128)
    on left: 64 65, on right: 62 63
struct_declarator_list (129)
    on left: 66 67, on right: 64 67
struct_declarator (130)
    on left: 68 69, on right: 66 67
array_specifier_list (131)
    on left: 70 71, on right: 69 71 75 191 208 216 217 220 221
array_specifier (132)
    on left: 72 73, on right: 70 71
type_specifier (133)
    on left: 74 75, on right: 64 65 176 182 183 188 189 190 191
precision_qualifier (134)
    on left: 76 77 78, on right: 82 205
type_qualifier (135)
    on left: 79 80, on right: 65 80 183 186 188 206 207 208 209 210
single_type_qualifier (136)
    on left: 81 82 83 84 85, on right: 79 80
storage_qualifier (137)
    on left: 86 87 88 89 90, on right: 81
interpolation_qualifier (138)
    on left: 91 92, on right: 83
invariant_qualifier (139)
    on left: 93, on right: 84
integer_constant_expression (140)
    on left: 94 95 96 97 98 99 100, on right: 73
conditional_expression (141)
    on left: 101 102, on right: 157
logical_or_expression (142)
    on left: 103 104, on right: 101 102 104
logical_xor_expression (143)
    on left: 105 106, on right: 103 104 106
logical_and_expression (144)
    on left: 107 108, on right: 105 106 108
inclusive_or_expression (145)
    on left: 109 110, on right: 107 108 110
exclusive_or_expression (146)
    on left: 111 112, on right: 109 110 112
and_expression (147)
    on left: 113 114, on right: 111 112 114
equality_expression (148)
    on left: 115 116 117, on right: 113 114 116 117
relational_expression (149)
    on left: 118 119 120 121 122, on right: 115 116 117 119 120 121
    122
shift_expression (150)
    on left: 123 124 125, on right: 118 119 120 121 122 124 125
additive_expression (151)
    on left: 126 127 128, on right: 123 124 125 127 128
multiplicative_expression (152)
    on left: 129 130 131 132, on right: 126 127 128 130 131 132
unary_expression (153)
    on left: 133 134 135 136, on right: 129 130 131 132 134 135 136
    158
unary_operator (154)
    on left: 137 138 139 140, on right: 136
postfix_expression (155)
    on left: 141 142 143 144 145 146 147, on right: 133 142 144 145
    146 147
primary_expression (156)
    on left: 148 149 150 151 152 153, on right: 141
variable_identifier (157)
    on left: 154, on right: 148 236
expression (158)
    on left: 155 156, on right: 102 142 153 156 228 229 230 235 238
    244
assignment_expression (159)
    on left: 157 158, on right: 102 155 156 158 174 175 223
assignment_operator (160)
    on left: 159 160 161 162 163 164 165 166 167 168 169,
    on right: 158
function_call (161)
    on left: 170, on right: 143 145
function_call_generic (162)
    on left: 171 172 173, on right: 170
function_call_parameter_list (163)
    on left: 174 175, on right: 171 175
function_identifier (164)
    on left: 176, on right: 171 172 173
function_definition (165)
    on left: 177, on right: 8
function_prototype (166)
    on left: 178, on right: 177 203
function_declarator (167)
    on left: 179 180, on right: 178
function_header (168)
    on left: 181, on right: 179 180
fully_specified_type (169)
    on left: 182 183, on right: 53 181 219 220 221 222 236
function_parameter_list (170)
    on left: 184 185, on right: 180 185
parameter_declaration (171)
    on left: 186 187 188 189, on right: 184 185
parameter_declarator (172)
    on left: 190 191, on right: 186 187
statement_list (173)
    on left: 192 193, on right: 193 197
statement (174)
    on left: 194 195, on right: 192 193 229 230 231 232
compound_statement (175)
    on left: 196 197, on right: 177 194
simple_statement (176)
    on left: 198 199 200 201 202, on right: 195
declaration (177)
    on left: 203 204 205 206 207 208 209 210, on right: 198 234
decl_identifier (178)
    on left: 211, on right: 207 208 212 213 215 216 217 218 219 220
    221 222
identifier_list (179)
    on left: 212 213, on right: 210 213
init_declarator_list (180)
    on left: 214 215 216 217 218, on right: 204 215 216 217 218
single_declaration (181)
    on left: 219 220 221 222, on right: 214
initializer (182)
    on left: 223 224, on right: 217 218 221 222 225 226 236
initializer_list (183)
    on left: 225 226, on right: 224 226
expression_statement (184)
    on left: 227 228, on right: 199 233
selection_statement (185)
    on left: 229 230, on right: 200
iteration_statement (186)
    on left: 231 232, on right: 201
for_init_statement (187)
    on left: 233 234, on right: 232
condition (188)
    on left: 235 236, on right: 231 240
for_rest_statement (189)
    on left: 237 238, on right: 232
conditionopt (190)
    on left: 239 240, on right: 237 238
jump_statement (191)
    on left: 241 242 243 244 245, on right: 202
scope_brace (192)
    on left: 246, on right: 16 31 197
scope_end_brace (193)
    on left: 247, on right: 16 31 197


state 0

    0 $accept: . gl_shader_program $end
    1 gl_shader_program: . shader string_const '{' gl_shader_global_declaration_list '}'

    shader  shift, and go to state 1

    gl_shader_program  go to state 2


state 1

    1 gl_shader_program: shader . string_const '{' gl_shader_global_declaration_list '}'

    string_const  shift, and go to state 3


state 2

    0 $accept: gl_shader_program . $end

    $end  shift, and go to state 4


state 3

    1 gl_shader_program: shader string_const . '{' gl_shader_global_declaration_list '}'

    '{'  shift, and go to state 5


state 4

    0 $accept: gl_shader_program $end .

    $default  accept


state 5

    1 gl_shader_program: shader string_const '{' . gl_shader_global_declaration_list '}'
   14 gl_shader_global_declaration_list: .
   15                                  | . gl_shader_global_declaration_list gl_shader_global_declaration

    $default  reduce using rule 14 (gl_shader_global_declaration_list)

    gl_shader_global_declaration_list  go to state 6


state 6
